--- a/themes/nwntools/layouts/page/dragoncode.html
+++ b/themes/nwntools/layouts/page/dragoncode.html
@@ -8,6 +8,48 @@
         <h2 class="subtitle">
           A helper to read and write secret coded messages IG.
         </h2>
+        <div class="columns">
+          <div class="column">
+            <div class="field">
+              <label class="label">Key Phrase</label>
+              <div class="control">
+                <input class="input" type="text" placeholder="Key Phrase"></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label">One Time Pad</label>
+              <div class="control">
+                <textarea class="textarea" placeholder="One Time Pad"></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label">One Time Pad Offset</label>
+              <div class="control">
+                <input class="input" type="text" placeholder="Alphabet" value="0"></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label">Alphabet</label>
+              <div class="control">
+                <input class="input" type="text" placeholder="Alphabet" value="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 ,.-"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="field">
+              <label class="label">Message</label>
+              <div class="control">
+                <textarea class="textarea" placeholder="Message"></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label">Output</label>
+              <div class="control">
+                <textarea class="textarea" placeholder="Output" readonly></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
