--- a/themes/nwntools/layouts/partials/head.html
+++ b/themes/nwntools/layouts/partials/head.html
@@ -4,9 +4,8 @@
   <title>{{ .Site.Title }}</title>
   {{ $style := resources.Get "sass/main.sass" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
-  <script defer src="/js/all.js"></script>
-  {{ $uijs := resources.Get "js/ui.js" | resources.Minify | resources.Fingerprint }}
-  <script defer src="{{ $uijs.Permalink }}"></script>
-  {{ $crypto := resources.Get "js/crypto.js" | resources.Minify | resources.Fingerprint }}
-  <script defer src="{{ $crypto.Permalink }}"></script>
+  {{ $uijs := resources.Get "js/ui.js" }}
+  {{ $crypto := resources.Get "js/crypto.js" }}
+  {{ $scripts := slice $uijs $crypto | resources.Concat "js/bundle.js" | resources.Minify | resources.Fingerprint }}
+  <script defer src="{{ $scripts.Permalink }}"></script>
 </head>
