Added Ravenloft styling.

--- a/themes/nwntools/assets/sass/main.sass
+++ b/themes/nwntools/assets/sass/main.sass
@@ -5,3 +5,28 @@
 @import "bulma/form/_all.sass"
 @import "bulma/grid/_all.sass"
 @import "bulma/layout/_all.sass"
+//@import "webkit.css"
+
+.rl-backdrop
+  background-image: url("/img/backdrop.png")
+  background-repeat: repeat
+
+.rl-background
+  background-color: #551313
+
+.rl-text-color
+  color: #dfdfdf
+
+.rl-input
+  background-color: black
+  color: #dfdfdf
+  border: 1px solid #808080
+  resize: none
+  &:focus, &:hover
+    border: 1px solid white
+
+.rl-button
+  background-color: #6e1818
+  color: #f23535
+  &:hover
+    background-color: #6e1818
