--- a/themes/nwntools/layouts/page/dragoncode.html
+++ b/themes/nwntools/layouts/page/dragoncode.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <section class="hero">
+  <section class="hero is-black">
     <div class="hero-body has-text-centered">
       <div class="container">
         <h1 class="title">
@@ -11,63 +11,77 @@
       </div>
     </div>
   </section>
-  <section class="section">
+  <section class="section rl-backdrop">
     <div class="container">
       <div id="error-messages" class="notification is-danger is-light is-hidden">
         <button class="delete"></button>
       </div>
       <div class="columns">
         <div class="column">
-          <div class="field">
-            <label class="label">Key Phrase</label>
-            <div class="control">
-              <input id="phrase" class="input" type="text" placeholder="Key Phrase"></textarea>
+          <div class="box rl-background">
+            <div class="field">
+              <label class="label rl-text-color">Message</label>
+              <div class="control">
+                <textarea id="message" class="textarea rl-input" placeholder="Message"></textarea>
+              </div>
             </div>
-          </div>
-          <div class="field">
-            <label class="label">One Time Pad</label>
-            <div class="control">
-              <textarea id="otp" class="textarea" placeholder="One Time Pad"></textarea>
+            <div class="field">
+              <label class="label rl-text-color">Key Phrase</label>
+              <div class="control">
+                <input id="phrase" class="input rl-input" type="text" placeholder="Key Phrase"></textarea>
+              </div>
             </div>
-          </div>
-          <div class="field">
-            <label class="label">One Time Pad Offset</label>
-            <div class="control">
-              <input id="otp-offset" class="input" type="text" placeholder="Alphabet" value="0"></textarea>
+            <div class="field">
+              <label class="label rl-text-color">One Time Pad</label>
+              <div class="control">
+                <textarea id="otp" class="textarea rl-input" placeholder="One Time Pad"></textarea>
+              </div>
             </div>
-          </div>
-          <div class="field">
-            <label class="label">Alphabet</label>
-            <div class="control">
-              <input id="alphabet" class="input" type="text" placeholder="Alphabet" value="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 ,.-?'"></textarea>
+            <div class="field">
+              <label class="label rl-text-color">One Time Pad Offset</label>
+              <div class="control">
+                <input id="otp-offset" class="input rl-input" type="text" placeholder="Alphabet" value="0"></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label rl-text-color">Alphabet</label>
+              <div class="control">
+                <input id="alphabet" class="input rl-input" type="text" placeholder="Alphabet" value="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 ,.-?'"></textarea>
+              </div>
             </div>
           </div>
         </div>
         <div class="column">
-          <div class="field">
-            <label class="label">Message</label>
-            <div class="control">
-              <textarea id="message" class="textarea" placeholder="Message"></textarea>
+          <div class="box rl-background">
+            <div class="field">
+              <label class="label rl-text-color">Output</label>
+              <div class="control">
+                <textarea id="output" class="textarea rl-input" placeholder="Output" readonly></textarea>
+              </div>
             </div>
-          </div>
-          <div class="field">
-            <label class="label">Output</label>
-            <div class="control">
-              <textarea id="output" class="textarea" placeholder="Output" readonly></textarea>
+            <div class="field">
+              <label class="label rl-text-color">To Write In Game</label>
+              <div class="control">
+                <textarea id="ig-writable" class="textarea rl-input" placeholder="Output" rows="12" readonly></textarea>
+              </div>
             </div>
-          </div>
-          <div class="field">
-            <label class="label">To Write In Game</label>
-            <div class="control">
-              <textarea id="ig-writable" class="textarea" placeholder="Output" readonly></textarea>
-            </div>
-          </div>
-          <div class="field is-grouped">
-            <div class="control">
-              <button class="button is-link" onclick="encrypt()">Encrypt</button>
-            </div>
-            <div class="control">
-              <button class="button is-link" onclick="decrypt()">Decrypt</button>
+            <div class="field is-grouped">
+              <div class="control">
+                <button class="button" onclick="encrypt()">
+                  <span class="icon">
+                    <i class="fas fa-lock"></i>
+                  </span>
+                  <span>Encrypt</span>
+                </button>
+              </div>
+              <div class="control">
+                <button class="button" onclick="decrypt()">
+                  <span class="icon">
+                    <i class="fas fa-lock-open"></i>
+                  </span>
+                  <span>Decrypt</span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
