--- a/themes/nwntools/layouts/partials/header.html
+++ b/themes/nwntools/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-black" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
   </div>
 
